--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -459,7 +459,7 @@ Eigene Zuordnung festlegen:
 |Feld |Einstellung
 
 | Typ
-| In welcher Spalte der CSV- oder TXT-Datei befinden sich die Werte, die du ändern möchtest?
+| In welcher Spalte der CSV- oder TXT-Datei sind die Werte, die du ändern möchtest?
 
 | Standardwert
 | Welcher Wert soll in plentymarkets gespeichert werden, wenn ein Datensatz keinen der Werte enthält, die du in das Feld *Von* eingegeben hast?
@@ -562,7 +562,7 @@ Zuordnung aktivieren/deaktivieren:
 . Öffne das Menü *Daten » Import » [Import öffnen]*.
 . Wechsele in die Ansicht *Zuordnung*. +
 → Die Zuordnungen des Imports werden angezeigt.
-. Klicke in der Spalte Inaktiv/Aktiv auf die Umschaltfläche. +
+. Klicke in der Spalte *Inaktiv/Aktiv* auf die Umschaltfläche. +
 * icon:toggle_off[set=material, role="darkGrey"] = Die Zuordnung ist inaktiv. Beim Import werden die Einstellungen dieser Zuordnung nicht berücksichtigt. +
 * icon:toggle_on[set=material, role="blue"] = Die Zuordnung ist aktiv. Beim Import werden die Einstellungen dieser Zuordnung berücksichtigt. +
 *_Wichtig:_* Wenn mehrere Zuordnungen aktiv sind, wird die Zuordnung mit der niedrigsten ID als erstes importiert. Auch die anderen aktiven Zuordnungen werden in aufsteigender Reihenfolge nach ihrer Position importiert.
@@ -734,7 +734,7 @@ Du hast einen Import aus Versehen gelöscht? Oder jemand hat an einem gut konfig
 * Mit diesen Einstellungen setzt du die Importe selbst auf einen früheren Stand zurück. Du kannst so _keine ins System importieren Daten zurücksetzen_. Das geht auch, xref:daten:backup.adoc#[aber anders].
 * Backups werden nur einmal täglich nachts erstellt. Wenn du ein Backup importierst, werden die Daten auf diesen Stand zurückgesetzt.
 * Alle Importe werden zurückgesetzt. Du kannst also nicht nur einen einzigen Import zurücksetzen. +
-*_Beispiel:_* Jemand hat die Einstellungen des Imports für Artikeldaten aus Versehen geändert. Im Laufe des Tages wurde aber auch ein Import für Gutscheincodes erstellt. Wenn du das Backup der letzten Nacht einspielst, werden beide Importe auf den Stand der letzten Nacht zurückgesetzt. Der Import für Artikeldaten wird repariert. Der Import für Gutscheincodes wird aber gelöscht, weil er zum Zeitpunkt des Backups noch nicht existierte. Die Lösung? Exportiere die Importeinstellungen von Importen, die seit dem letzten Backup erstellt oder geändert wurden. Nach dem Backup kannst du sie dann wieder in dein System importieren.
+*_Beispiel:_* Jemand hat die Einstellungen des Imports für Artikeldaten aus Versehen geändert. Im Laufe des Tages wurde aber auch ein Import für Gutscheincodes erstellt. Wenn du das Backup der letzten Nacht einspielst, werden beide Importe auf den Stand der letzten Nacht zurückgesetzt. Der Import für Artikeldaten wird repariert. Der Import für Gutscheincodes wird aber gelöscht, weil er zum Zeitpunkt des Backups noch nicht existierte. Die Lösung? Exportiere die Importeinstellungen von Importen, die seit dem letzten Backup erstellt oder geändert wurden. Nach dem Backup kannst du die Importeinstellungen dann wieder in dein System importieren.
 
 [.instruction]
 Backups von Importen einspielen:
@@ -852,7 +852,7 @@ Status von Importen aufrufen:
 | Der Name des Imports
 
 | *Fortschritt*
-| Der Fortschritt des Importvorgangs als Balken. Sobald alle Importvorgänge abgeschlossen sind, wird das Datum und die Uhrzeit angezeigt, wenn du mit der Maus auf den Fortschrittsbalken zeigst.
+| Der Fortschritt des Importvorgangs als Balken. Wenn alle Importvorgänge abgeschlossen sind, wird das Datum und die Uhrzeit angezeigt, wenn du mit der Maus auf den Fortschrittsbalken zeigst.
 
 | *Fehler*
 | In den Importvorgängen aufgetretene Fehler +
