more fixes after health check

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -1302,7 +1302,7 @@ Je nachdem, welchen Statistiktyp du gewählt hast, findest du auf der der Handbu
 
 * xref:daten:statistiken.adoc#20[Gesamtumsatzverlauf]
 * xref:daten:statistiken.adoc#100[Umsatz nach Kategorie]
-* xref:daten.adoc#20[Umsatz nach Herkunft pro Auftrag]
+* xref:daten:statistiken.adoc#20[Umsatz nach Herkunft pro Auftrag]
 
 Allgemeine Informationen, wie du z.B. Statistiken bearbeitest, findest du auf der Handbuchseite xref:daten:statistiken.adoc#[Statistiken verwalten].
 
