--- a/docs/de-de/modules/fulfillment/pages/versand-center-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/versand-center-2-0.adoc
@@ -392,7 +392,7 @@ Auftragszusammenfassung für mehrere Aufträge erstellen:
 [TIP]
 .Auftragszusammenfassung über den elastischem Export exportieren
 ======
-Als Alternative zur Auftragszusammenfassung eines Tages im Menü *Aufträge » Versand-Center 2.0* kannst du einen xref:daten:elastischer-export.adoc#[elastischen Export] durchführen. Erstelle dazu im Vorfeld ein Exportformat mit dem xref:daten:FormatDesigner.adoc#[FormatDesigner] vom Typ <<#daten/daten-exportieren/FormatDesigner/format-typen/auftraege#1100, Aufträge>>.
+Als Alternative zur Auftragszusammenfassung eines Tages im Menü *Aufträge » Versand-Center 2.0* kannst du einen xref:daten:elastischer-export.adoc#[elastischen Export] durchführen. Erstelle dazu im Vorfeld ein Exportformat mit dem xref:daten:FormatDesigner.adoc#[FormatDesigner] vom Typ xref:daten:formatdesigner-auftraege.adoc#1100[Aufträge].
 ======
 
 --
