--- a/docs/de-de/modules/fulfillment/pages/versand-vorbereiten.adoc
+++ b/docs/de-de/modules/fulfillment/pages/versand-vorbereiten.adoc
@@ -55,7 +55,7 @@ Lieferländer bearbeiten und aktivieren:
 *Aktiv* = Lieferland steht zur Verfügung. +
 *Inaktiv* = Lieferland steht nicht zur Verfügung. +
 *Backoffice aktiv* = Lieferländer mit dieser Eigenschaft sind nur im plentymarkets System und nicht im Webshop sichtbar. +
-*Lieferant aktiv* = Lieferländer mit dieser Eigenschaft stehen für die Einstellung als xref:webshop:ceres-einrichten.adoc#240[Standardlieferland] im Menü *Einrichtung » Mandant » [Mandant wählen] » Aufträge* nicht zur Verfügung.
+*Lieferant aktiv* = Lieferländer mit dieser Eigenschaft stehen für die Einstellung als xref:webshop:ceres-einrichten.adoc#plentyshop-assistent-standardeinstellungen[Standardlieferland] im Menü *Einrichtung » Mandant » [Mandant wählen] » Aufträge* nicht zur Verfügung.
 
 | *Lager*
 |Wähle das Lager, das dem Lieferland als Hauptlager zugeordnet werden soll und z.B. in Aufträgen automatisch eingestellt sein soll. Wähle *ALLE*, wenn alle Lager dem Lieferland zugeordnet werden sollen. In diesem Fall wird für Aufträge automatisch das Lager mit der kleinsten ID gewählt. Beachte dazu auch die xref:auftraege:auftraege-verwalten.adoc#[Lagereinstellungen] im Menü *Einrichtung » Aufträge » Einstellungen*.
@@ -794,7 +794,7 @@ Versandprofil aktivieren:
 [IMPORTANT]
 .Standardversandprofil
 ====
-Wenn ein Auftrag Artikel enthält, bei denen kein Versandprofil aktiviert wurde, wird das Standardversandprofil aus deinem plentyShop für die Artikel verwendet. Das xref:webshop:ceres-einrichten.adoc#260[Standardversandprofil] wählst du im Menü *Einrichtung » Mandant » [Mandant wählen] » Aufträge*. Wenn kein Standardversandprofil eingerichtet ist, wird das Versandprofil mit der höchsten Priorität verwendet.
+Wenn ein Auftrag Artikel enthält, bei denen kein Versandprofil aktiviert wurde, wird das Standardversandprofil aus deinem plentyShop für die Artikel verwendet. Das xref:webshop:ceres-einrichten.adoc#plentyshop-assistent-standardeinstellungen[Standardversandprofil] wählst du im Menü *Einrichtung » Mandant » [Mandant wählen] » Aufträge*. Wenn kein Standardversandprofil eingerichtet ist, wird das Versandprofil mit der höchsten Priorität verwendet.
 ====
 
 [#1900]
