--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -21,7 +21,7 @@ The EmailBuilder is a modular construction kit for quickly creating and editing 
 
 You can then use the header and footer templates in the email templates as desired. Header and footer are globally active; changes you make to the header and footer affect the rest of all existing templates and all other templates that you will create in the future.
 
-The header, the footer and the settings in the template such as the name, the subject etc. form the framework of your email, so to say. The content of the template is formed with <<#insert-widgets, widgets>> and <<#variables-emailbuilder, variables>>. In the emails that are sent to your customer, the variables will then be replaced with the correct content. For example: The variable `Delivery address First name and last name` will be replaced in the email with the first name and the last name of the contact from the delivery address.
+The header, the footer and the settings in the template such as the name, the subject etc. form the framework of your email, so to say. The content of the template is formed with <<#insert-widget, widgets>> and <<#variables-emailbuilder, variables>>. In the emails that are sent to your customer, the variables will then be replaced with the correct content. For example: The variable `Delivery address First name and last name` will be replaced in the email with the first name and the last name of the contact from the delivery address.
 
 In case of certain events, e.g. if a new order is placed in your plentyShop or when a contact subscribes to a newsletter, your plentymarkets system automatically <<#automate-email-despatch, creates emails from these templates>> and sends them to your contacts.
 
@@ -878,9 +878,9 @@ The available variables for the EmailBuilder are grouped into the following cate
 ** <<#variables-order-order-items, Order items (only for item list widget)>>
 ** <<#variables-order-shipping, Shipping>>
 
-* <<#variables-contact, Contact>>
+* <<#variables-contact-general, Contact>>
 
-** <<#variables-contact, General contact variables>>
+** <<#variables-contact-general, General contact variables>>
 ** <<#variables-contact-delivery-address, Delivery address>>
 ** <<#variables-contact-invoice-address, Invoice address>>
 ** <<#variables-contact-options, Options>>
