--- a/docs/en-gb/modules/crm/pages/sending-emails.adoc
+++ b/docs/en-gb/modules/crm/pages/sending-emails.adoc
@@ -635,7 +635,7 @@ An xref:crm:using-the-ticket-system.adoc#2100[email account] has to be saved in 
 [#2000]
 === Sending coupons via email
 
-You can send coupons and coupon codes via email. Simply attach them to emails as PDF files. For further information, refer to the chapters xref:orders:coupons.adoc#coupon-codes-email[Inserting coupon codes directly into emails] and xref:orders:coupons.adoc#configure-coupon-template[Configuring coupon templates] on the xref:orders:coupons.adoc#[Coupons] page of the manual.
+You can send coupons and coupon codes via email. Simply attach them to emails as PDF files. For further information, refer to the chapters xref:orders:coupons.adoc#send-email-coupon-codes[Inserting coupon codes directly into emails] and xref:orders:coupons.adoc#set-up-coupon-template[Configuring coupon templates] on the xref:orders:coupons.adoc#[Coupons] page of the manual.
 
 [#2300]
 == Setting up the automatic email despatch
@@ -730,7 +730,7 @@ Expand the area *Other emails sent to this customer...* to display all emails th
 
 Go to *plentymarkets logo (Start) » Statistics* to create a new statistic. Select the statistic type *Sent email templates* in the *Orders* area. This statistic shows information about the emails sent with your plentymarkets system according to the ID and the name of the email template. This statistical feedback is made for each date within the selected time span. The standard setting of the time span is the last 30 days. You can also adapt the time span or select a start date and an end date.
 
-In this statistic, you can see for example which email template was used during the selected time period. This helps you to easily recognise which processes were carried out on a regular basis. For further information, refer to the xref:business-decisions:statistics.adoc#[Statistics] page of the manual.
+In this statistic, you can see for example which email template was used during the selected time period. This helps you to easily recognise which processes were carried out on a regular basis. For further information, refer to the xref:data:statistics.adoc#[Statistics] page of the manual.
 
 
 [#4000]
