--- a/docs/en-gb/modules/fulfilment/pages/generating-documents.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/generating-documents.adoc
@@ -71,7 +71,7 @@ If you generate a list of delivery addresses with the data format UPS Worldship 
 [#import-package-numbers]
 == Importing package numbers
 
-Besides the convenient option to import package numbers into your system via the xref:fulfilment:generating-documents.adoc#package-numbers-elasticsync[import tool], you can also import the package numbers xref:fulfilment:generating-documents.adoc#manually-import-package-numbers[manually] or with the help of a <<fulfilment/generating-documents#package-numbers-barcode-scanner#, barcode scanner>>.
+Besides the convenient option to import package numbers into your system via the <<#package-numbers-elastic-sync, import tool>>, you can also import the package numbers <<#manually-import-package-numbers, manually>> or with the help of a <<#package-numbers-barcode-scanner#, barcode scanner>>.
 
 [#package-numbers-elastic-sync]
 === Importing package numbers via the import tool
