--- a/docs/en-gb/modules/fulfilment/pages/plugin-dpd-shipping-uk.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/plugin-dpd-shipping-uk.adoc
@@ -35,7 +35,7 @@ Afterwards, carry out shipping service provider-specific settings to set up the 
 
 * <<#set-up-interface, Setting up the interface>>
 * <<#dpd-uk-basic-settings, Carrying out the basic settings>>
-* <<#dpd-uk-shipper-information], Entering shipper information>>
+* <<#dpd-uk-shipper-information, Entering shipper information>>
 * <<#dpd-uk-shipping-settings, Carrying out shipping settings>>
 
 [#set-up-interface]
