--- a/docs/de-de/modules/fulfillment/partials/ebay-fulfillment-by-orange-connex.adoc
+++ b/docs/de-de/modules/fulfillment/partials/ebay-fulfillment-by-orange-connex.adoc
@@ -379,7 +379,7 @@ Ein etwas abstraktes Beispiel für ein “festes” Bundle ist ein Auto. Das Aut
 [#bundle-mehrere-einzelne-artikel]
 ==== Bundle aus mehreren, einzelnen Artikeln
 
-Das Bundle besteht aus mehreren, einzelnen Artikeln. Das heißt, du musst in jedem Bestandteil dieses Pakets die Verfügbarkeit wie in Kapitel xref:fulfillment:ebay-fulfillment.adoc#artikel-einrichten-sku-erhalten[Artikel einrichten und SKU erhalten] beschrieben setzen. Dadurch verfügt jeder Artikel im Paket über eine eigene SKU. Bei der Bestellübermittlung an eBay Fulfillment by Orange Connex wird jeder Bestandteil des Artikelpakets wie die Bestellung einzelner Artikel behandelt.
+Das Bundle besteht aus mehreren, einzelnen Artikeln. Das heißt, du musst in jedem Bestandteil dieses Pakets die Verfügbarkeit wie in Kapitel <<#artikel-einrichten-sku-erhalten, Artikel einrichten und SKU erhalten>> beschrieben setzen. Dadurch verfügt jeder Artikel im Paket über eine eigene SKU. Bei der Bestellübermittlung an eBay Fulfillment by Orange Connex wird jeder Bestandteil des Artikelpakets wie die Bestellung einzelner Artikel behandelt.
 
 [.collapseBox]
 .Beispiel eines Bundles aus mehreren, einzelnen Artikeln
@@ -589,7 +589,7 @@ Ereignisaktion zum Buchen des Warenausgangs einrichten:
 [#ea-automatische-sendungsverfolgung]
 === Ereignisaktion für die automatische Sendungsverfolgung (Tracking-URL) einrichten
 
-Mit deinem plentymarkets System ist es möglich, eine Versandbestätigung via E-Mail an deine Kund:innen zu versenden. Dies setzt voraus, dass du die xref:fulfillment:ebay-fulfillment.adoc#e-mail-server-zugangsdaten[Zugangsdaten deines E-Mail-Servers gespeichert] und eine entsprechende E-Mail-Vorlage in deinem System erstellt hast.
+Mit deinem plentymarkets System ist es möglich, eine Versandbestätigung via E-Mail an deine Kund:innen zu versenden. Dies setzt voraus, dass du die <<#e-mail-server-zugangsdaten, Zugangsdaten deines E-Mail-Servers gespeichert>> und eine entsprechende E-Mail-Vorlage in deinem System erstellt hast.
 
 [.instruction]
 Ereignisaktion für die automatische Sendungsverfolgung (Tracking-URL) einrichten:
@@ -709,7 +709,7 @@ Ab diesem Moment und unter der Voraussetzung, dass alle Einstellungen in deinem 
 
 Wenn du Bestellungen für den selben Artikel erhältst, den du zuvor aus deinem eigenen Lager verkauft hast, überträgt das plentymarkets System keinen Outbound-Auftrag an eBay Fulfillment by Orange Connex. Die Übertragung findet so lange nicht statt, bis der Bestand von eBay Fulfillment by Orange Connex für das entsprechende Lager aktualisiert wurde.
 
-Falls du dich bereits für ein xref:fulfillment:ebay-fulfillment.adoc#ea-outbound-auftrag-senden[automatisiertes Senden des Outbound-Auftrags] entschieden hast, steht der Abwicklung von eBay Fulfillment by Orange Connex-Aufträgen nichts mehr im Wege.
+Falls du dich bereits für ein <<#ea-outbound-auftrag-senden, automatisiertes Senden des Outbound-Auftrags>> entschieden hast, steht der Abwicklung von eBay Fulfillment by Orange Connex-Aufträgen nichts mehr im Wege.
 
 [#auftrage-splitten]
 === Splitten von Aufträgen
