--- a/docs/en-gb/modules/fulfilment/partials/ebay-fulfillment-by-orange-connex.adoc
+++ b/docs/en-gb/modules/fulfilment/partials/ebay-fulfillment-by-orange-connex.adoc
@@ -379,7 +379,7 @@ A somewhat abstract example of a "fixed" bundle is a car. The car is sold as a u
 [#bundle-several-individual-items]
 ==== Bundle of several individual items
 
-The bundle consists of several individual items. This means that you have to set the availability in each component of this package as described in chapter xref:fulfilment:ebay-fulfillment.adoc#set-up-item-obtain-sku[Setting up items and obtaining the SKU]. This means that each item in the package has its own SKU. When submitting an order to eBay Fulfillment by Orange Connex, each component of the item package is treated like an individual item order.
+The bundle consists of several individual items. This means that you have to set the availability in each component of this package as described in chapter <<#set-up-item-obtain-sku, Setting up items and obtaining the SKU>>. This means that each item in the package has its own SKU. When submitting an order to eBay Fulfillment by Orange Connex, each component of the item package is treated like an individual item order.
 
 [.collapseBox]
 .Example of a bundle of several individual items
@@ -589,7 +589,7 @@ Setting up an event procedure to book outgoing items:
 [#ep-automatic-tracking]
 === Setting up an event procedure for automated shipment tracking (tracking URL)
 
-With your plentymarkets system, it is possible to send a shipping confirmation via email to your customers. This requires that you xref:fulfilment:ebay-fulfillment.adoc#email-server-login-details[saved the login details of your email server] and created a corresponding email template in your system.
+With your plentymarkets system, it is possible to send a shipping confirmation via email to your customers. This requires that you <<#email-server-login-details, saved the login details of your email server>> and created a corresponding email template in your system.
 
 [.instruction]
 Setting up an event procedure for automated shipment tracking (tracking URL):
@@ -709,7 +709,7 @@ From this moment on and on condition that all settings in your plentymarkets sys
 
 If you have received orders for the same item that you sold from your own warehouse in the past, the plentymarkets system does not transfer an outbound order to eBay Fulfillment by Orange Connex. Only does the transmission take place when eBay Fulfillment by Orange Connex updates the stock for the corresponding warehouse.
 
-If you have already decided to xref:fulfilment:ebay-fulfillment.adoc#ep-send-outbound-order[send the outbound orders automatically], nothing stands in the way of processing eBay Fulfillment by Orange Connex orders.
+If you have already decided to <<#ep-send-outbound-order, send the outbound orders automatically>>, nothing stands in the way of processing eBay Fulfillment by Orange Connex orders.
 
 [#split-orders]
 === Order splitting
