fix error messages

--- a/docs/de-de/modules/maerkte/pages/best-practices-kaufland-rechnungen-hochladen.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-kaufland-rechnungen-hochladen.adoc
@@ -58,7 +58,7 @@ Wie du die Bankdaten auf Kaufland.de-Rechnungen ausblendest kommt darauf an, wie
 |Methode |Vorgehensweise
 
 | Bankdaten in PDF-Vorlage
-| Wenn du deine Bankdaten über eine <</auftraege/auftragsdokumente#1700, PDF-Vorlage>> auf Rechnungsdokumenten anzeigen lässt, xref:auftraege:auftragsdokumente.adoc#1700[erstelle] eine weitere PDF-Vorlage für Kaufland.de, die keine Bankdaten enthält. Speichere optional für diese PDF-Vorlage das Kaufland.de-Logo. Speichere diese PDF-Vorlage im Menü *Einrichtung » Mandant » Standard » Standorte » Deutschland (Standard) » Dokumente » Rechnung » Tab: PDF-Vorlage* für die Zahlungsart *Kaufland.de Payment*. Deine Bankdaten werden dann nicht auf Kaufland.de-Rechnungen angezeigt. +
+| Wenn du deine Bankdaten über eine xref:auftraege:auftragsdokumente.adoc#1700[PDF-Vorlage] auf Rechnungsdokumenten anzeigen lässt, xref:auftraege:auftragsdokumente.adoc#1700[erstelle] eine weitere PDF-Vorlage für Kaufland.de, die keine Bankdaten enthält. Speichere optional für diese PDF-Vorlage das Kaufland.de-Logo. Speichere diese PDF-Vorlage im Menü *Einrichtung » Mandant » Standard » Standorte » Deutschland (Standard) » Dokumente » Rechnung » Tab: PDF-Vorlage* für die Zahlungsart *Kaufland.de Payment*. Deine Bankdaten werden dann nicht auf Kaufland.de-Rechnungen angezeigt. +
 
 image::maerkte:Kaufland_logo.png[]
 
