--- a/docs/de-de/modules/business-entscheidungen/partials/auftragsstatus.adoc
+++ b/docs/de-de/modules/business-entscheidungen/partials/auftragsstatus.adoc
@@ -1,5 +1,5 @@
 === Auftragsstatus
 
 Filtert die ausgewählte Kennzahl und Dimension zusätzlich nach einem oder mehreren Auftragsstatus.
-Zur Auswahl stehen dir für diesen Filter die in deinem System angelegten <<auftraege/auftraege-verwalten#1200#, Auftragsstatus>>.
+Zur Auswahl stehen dir für diesen Filter die in deinem System angelegten xref:auftraege:auftraege-verwalten.adoc#1200[Auftragsstatus].
 Wähle einen der folgenden Vergleichsoperatoren aus und dann die gewünschten Auftragsstatus (icon:check-square[role="blue"]).
