new page - import introduction - EN

--- a/docs/en-gb/modules/data/pages/import-introduction.adoc
+++ b/docs/en-gb/modules/data/pages/import-introduction.adoc
@@ -1,4 +1,4 @@
-= Getting to know the Import tool
+= Introduction to the Import tool
 :keywords: Import data, Data import, Import, ElasticSync, Synchronise, Synchronisation
 :description: Get to know the plentymarkets Import tool.
 :author: team-plenty-channel
