--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -178,6 +178,7 @@
 *** xref:fulfilment:best-practices-ups.adoc[FAQ: UPS]
 * xref:data:data.adoc[Data]
 ** xref:data:importing-data.adoc[Importing data]
+*** xref:data:import-introduction.adoc[Introduction to the Import tool]
 *** xref:data:ElasticSync.adoc[Using the import tool]
 *** xref:data:import-types.adoc[Import types]
 **** xref:data:elasticSync-item.adoc[Item]
