--- a/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
@@ -2,9 +2,8 @@
 .Getting to know the catalogue menu for marketplace formats
 --
 image::markets:catalogue-menu-colours.png[]
-__Menu structure of a catalogue with marketplace format__
 
-* *Navigation* When you open a catalogue, the view *Mapping* is shown by default. Use the navigation to switch to other views of the catalogue. Access the catalogue settings or set filters to only export specific data. You can also go back to the catalogues overview or create a new catalogue.
+* *Navigation* When you open a catalogue, the view *Mapping* is shown by default. Use the navigation to switch to other views of the catalogue. Open the catalogue settings. Use filters that limit the data that is exported. You can also go back to the catalogues overview or create a new catalogue.
 
 * *Toolbar* The toolbar provides actions for the catalogue. For example, save your mappings, restore an older version of the catalogue or hide or show optional marketplace data fields.
 
@@ -14,11 +13,7 @@ __Menu structure of a catalogue with marketplace format__
 * *plentymarkets data fields* The left side of the catalogue is where you map the marketplace data fields with suitable plentymarkets data fields. In the screenshot, a few of the fields are already mapped.
 --
 
-[NOTE]
-.Properties instead of free text fields and characteristics
-====
-With catalogues, you can no longer export free text fields or characteristics. Instead, use xref:item:properties.adoc#500[properties].
-====
+* Free text fields and characteristics cannot be exported in catalogues. Instead, use xref:item:properties.adoc#500[Properties].
 
 [.instruction]
 Mapping catalogue fields:
@@ -34,10 +29,10 @@ endif::amazon-flatfile[]
 ifdef::bol.com[]
 *_Note:_* Some data fields are mapped by default when you create a catalogue. +
 endif::bol.com[]
-→ In the right column, you map the plentymarkets data fields. Any plentymarkets data fields that are already assigned are also shown in the right column. +
-*_Tip:_* Need more information about the plentymarkets data fields? All data fields are described on the manual page for the standard format xref:data:catalogues-item.adoc#[Item (new)].
+→ In the right column, you map the plentymarkets data fields. Any plentymarkets data fields that you already mapped are also shown in the right column.
 . Now, map suitable plentymarkets data fields to the market data fields. +
-You can choose from the following mappings which are described in the info boxes below:
+*_Tip:_* Need more information about the plentymarkets data fields? Then head over to the manual page for the standard format xref:data:catalogue-item.adoc#[Item (new)]. +
+For each marketplace data field, you have the following mapping options. These mapping options are described in more detail in the info boxes below:
   * *Simple 1:1 mapping*
   * *Complex 1:1 mapping*
   * *1:1 mapping with fallback data fields*
@@ -46,25 +41,15 @@ You can choose from the following mappings which are described in the info boxes
 . Save (icon:save[set=plenty]) the catalogue. +
 → The mappings are saved.
 
-[TIP]
-.Information about the data fields
-====
-* *_Data fields of the marketplace:_*
-  ** Check the documentation of the market to find information about the marketplace data fields.
-
-* *_Data fields in plentymarkets_*:
-  ** Check out the manual page for the standard format xref:data:catalogues-item.adoc#[Item (new)] for more information about the plentymarkets data fields that you can map in this catalogue.
-====
-
 [.collapseBox]
 .*Simple 1:1 mapping:* 1 marketplace data field, 1 plentymarkets data field
 --
 
 In a simple 1:1 mapping, you map a plentymarkets data field to the marketplace data field. If no suitable setting exists in plentymarkets, you can map a property instead.
 
-As such, with a simple 1:1 mapping you specify:
+As such, simple 1:1 mappings allow you to:
 
-* You want to fill this marketplace data field with the data from this plentymarkets setting.
+* I want to fill this marketplace data field with the data from this plentymarkets setting.
 * If the data field is empty for a variation, no value is exported for this variation.
 
 [.instruction]
@@ -73,15 +58,15 @@ Creating a simple 1:1 mapping:
 //tag::simple-mappings-config[]
 . Next to the marketplace data field, click on *+ Add data field*. +
 → To the left, the list of available plentymarkets data fields are shown in groups.
-. Click on a group to expand the associated plentymarkets data fields. +
-→ The plentymarkets data fields are shown.
+. Click on the group you need. +
+→ The plentymarkets data fields of the group are shown.
 . Click on the plus to the right of the plentymarkets data field you want to select. +
 → The plentymarkets data field is added to the right.
 . Click on *Confirm*.
 
-*_Example:_* Sales price and RRP
+*_Example:_* Sales price and RRP for Otto Market
 
-This gif shows you how to map the marketplace data fields *Sales price* and *RRP* for Otto Market to suitable plentymarkets data fields:
+This gif shows you how to map the marketplace data fields *Sales price* and *RRP* for Otto Market to plentymarkets data fields:
 
 image::markets:gif-catalogue-mapping-simple-en.gif[]
 //end::simple-mappings-config[]
@@ -107,7 +92,7 @@ You can recognise complex mappings from the field that is shown below the name o
 
 image::markets:catalogue-complex-mappings.png[]
 
-NOTE: For complex mappings, do not map own values or properties of the type *None*.
+*_Important:_* For complex mappings, do not map own values or properties of the type *None*.
 
 //end::complex-mappings[]
 
@@ -122,7 +107,7 @@ Creating a complex 1:1:n mapping:
 . Next to the marketplace data field, click on *+ Add data field*. +
 → To the left, the available plentymarkets data fields are listed in groups. +
 . Click on a group. +
-→ The plentymarkets data fields are shown.
+→ The plentymarkets data fields of the group are shown.
 . Click on the plentymarkets data field for which you want to map values. +
 *_Important:_* Do not map own values or properties of the type *None*. +
 → Your next steps depend on the plentymarkets data field you selected:
@@ -138,6 +123,8 @@ Creating a complex 1:1:n mapping:
   ** Select a value from the drop-down list.
   ** Click on *Confirm*.
 
+*_Example:_* Delivery time in days for Otto Market
+
 This gif shows you how to map suitable plentymarkets values to the values of the marketplace data fields *Delivery time in days* for Otto Market:
 
 image::markets:gif-catalogue-mapping-complex-en.gif[]
@@ -151,9 +138,9 @@ image::markets:gif-catalogue-mapping-complex-en.gif[]
 
 In a 1:1 mapping with one or more fallback data fields, you map a plentymarkets data field to the marketplace data field. In addition, you specify one or more fallback data fields. This ensures that the system keeps looking if the first plentymarkets data field is empty or contains an invalid value.
 
-So with this mapping, you specify the following:
+So this mapping specifies:
 
-* You want to fill this marketplace data field with the data from this plentymarkets setting.
+* I want to fill this marketplace data field with the data from this plentymarkets setting.
 * If that data field is empty or invalid for a variation, the first fallback data field is checked and the value of that fallback data field is exported instead.
 * If the first fallback data field is also empty or invalid for a variation, the value of the second fallback data field is exported and so on.
 
@@ -163,14 +150,16 @@ Creating a 1:1 mapping with fallback data fields:
 //tag::fallback-mappings-config[]
 . Next to the marketplace data field, click on *+ Add data field*. +
 → To the left, the list of available plentymarkets data fields are shown in groups.
-. Click on a group to expand the associated plentymarkets data fields. +
-→ The plentymarkets data fields are shown.
+. Click on the group you need. +
+→ The plentymarkets data fields of the group are shown.
 . Click on the plus to the right of the plentymarkets data field you want to select. +
 → The plentymarkets data field is added to the right.
 . In the list of plentymarkets data fields, click on the plus icon next to the plentymarkets data field that you want to map. +
 → The fallback data field is exported when the first data field does not exist or is empty. +
 *_Note:_* Even if you assign one or more fallback data fields, the value of only one of those fields is exported. For each variation, the mapped plentymarkets data fields are checked in the order in which you mapped them. This means that if the first data field does not provide a value for a variation, the first fallback data field is exported etc.
 . Click on *Confirm*.
+
+*_Example:_* Fallback data field for SKU for Otto Market
 
 This gif shows you how to map the plentymarkets data field *SKU* and the fallback data field *Variation ID* to the marketplace data field *SKU* for Otto Market:
 
@@ -184,9 +173,9 @@ image::markets:gif-catalogue-mapping-fallback-en.gif[]
 
 In a 1:n mapping, you map several plentymarkets data fields to the marketplace data field. You can link these data fields with a separator.
 
-So with this mapping, you specify the following:
+So this mapping specifies:
 
-* You want to combine these plentymarkets data fields during export so that the marketplace data field is filled with the data of these two or more plentymarkets settings.
+* I want to combine these plentymarkets data fields during export so that the marketplace data field is filled with the data of these two or more plentymarkets settings.
 
 [.instruction]
 Creating a 1:n mapping:
@@ -194,8 +183,8 @@ Creating a 1:n mapping:
 //tag::1-to-n-mappings-config[]
 . Next to the marketplace data field, click on *+ Add data field*. +
 → To the left, the list of available plentymarkets data fields are shown in groups.
-. Click on a group to expand the associated plentymarkets data fields. +
-→ The plentymarkets data fields are shown.
+. Click on the group you need. +
+→ The plentymarkets data fields of the group are shown.
 . Click on the plus to the right of the plentymarkets data field you want to select. +
 → The plentymarkets data field is added to the right.
 . Click on *Confirm*.
@@ -210,6 +199,8 @@ Creating a 1:n mapping:
 → The mappings are saved. +
 → During the export, the content of the plentymarkets data fields is combined and exported as one field.
 //end::1-to-n-mappings-config[]
+
+//TODO: Example with GIF
 --
 
 [.collapseBox]
@@ -218,9 +209,9 @@ Creating a 1:n mapping:
 
 You are sure that you want to export the same value for all variations of a catalogue for a marketplace data field? Then specify an own value. This own value is then exported for all variations.
 
-So with this mapping, you specify the following:
+So this mapping specifies:
 
-* For this marketplace data field, you want to export the value that you entered in the field *Own value* for _all_ variations of this catalogue.
+* For this marketplace data field, I want to export the value that I entered in the field *Own value* for _all_ variations of this catalogue.
 
 [.instruction]
 Creating an own value mapping:
@@ -237,8 +228,45 @@ Creating an own value mapping:
 
 You want to export diameter information for some of your variations. The diameter is saved in centimetres for all your variations. Instead of creating a property for the unit and linking this property to the variations, you can enter the own value `cm`.
 
-This is how you can map an own value for the diameter unit:
+This is an example of how you can map an own value for the diameter unit:
 
 image::markets:gif-catalogue-own-value-en.gif[width=600]
 //end::own-mappings-config[]
+--
+
+[.collapseBox]
+.*Mapping with mathematical calculations:* 1 Marketplace data field, the plentymarkets value is recalculated using the formula during export
+--
+
+//tag::formula-config[]
+Mathematical calculations allow you to change values automatically during the export.
+
+* This function only works for data fields that contain numerical values.
+* This functionality is new and not available for all catalogue formats.
+
+So this mapping specifies:
+
+* I want the numerical value of a plentymarkets data field to be recalculated during the export. Basic arithmetic operations are available for the formulas.
+
+[.instruction]
+Recalculating numerical values:
+
+. Next to the marketplace data field, click on *+ Add data field*. +
+→ To the left, the list of available plentymarkets data fields are shown in groups.
+. At the very top of the list, click on the plus icon next to *Formula* (icon:calculate[set=material]). +
+→ The data field *Formula* is added to the field on the right.
+. Click into the data field. +
+→ The window *Modify value* is shown.
+. Enter a numerical value or select a plentymarkets data field at the bottom right of the window to add it to the calculation (icon:add[set=material]). +
+*_Tip:_* Use the search function. This helps you to find data fields quickly.
+. *_Optional:_* If the symbol icon:more_vert[set=material] is shown in the data field, select the correct assignment for the data field. +
+*_Tip:_* A number tells you how many assignments are necessary for the data field.
+    .. Click on the symbol icon:more_vert[set=material]. +
+    .. In the window shown, select the assignments from the drop-down list.
+    .. *Save* the settings.
+. Enter numbers and mathematical operators with the on-screen calculator or the keyboard.
+. *Save* the settings. +
+→ The entered formula is displayed in the overview. +
+→ The calculation will be carried out in the next export.
+//end::formula-config[]
 --
