--- a/docs/de-de/modules/videos/pages/mfn-retouren.adoc
+++ b/docs/de-de/modules/videos/pages/mfn-retouren.adoc
@@ -56,7 +56,7 @@ An dieser Stelle würdest du natürlich liebend gerne Amazon informieren.
 
 Tatsächlich geht das automatisch, indem du eine Ereignisaktion erstellst, die aktiviert wird, sobald du eine Gutschrift für eine Amazon-Retoure anlegst.
 
-Also jedes mal, wenn das passiert, informiert plenty Amazon automatisch über die neue Retoure.
+Also jedes Mal, wenn das passiert, informiert plenty Amazon automatisch über die neue Retoure.
 
 Und Amazon wird entweder mit einem "Alles klar!" antworten oder gibt dir Bescheid, falls etwas schiefgelaufen ist.
 
