--- a/docs/de-de/modules/daten/partials/catalogue-menu.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-menu.adoc
@@ -78,7 +78,11 @@ endif::file-export[]
 
 | icon:filter_alt[set=material] *Filter*
 | Setze Filter, um nur bestimmte Datensätze zu exportieren. +
-*_Hinweis:_* Nicht für alle Kataloge sind Filter verfügbar.
+*_Hinweis:_* Filter sind noch nicht für alle Kataloge verfügbar.
+
+*_Tipp:_* In der Navigation kannst du jederzeit sehen, wie viele Filter für den Katalog aktiv sind:
+
+image:daten:filters-number-of-filters.png[]
 
 | icon:order_return_create_edit[set=plenty] *Eigene Datenfelder*
 | Eigene Datenfelder sind für die meisten Exporte noch nicht verfügbar.
