--- a/docs/en-gb/modules/data/partials/catalogue-menu.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-menu.adoc
@@ -79,6 +79,10 @@ endif::file-export[]
 | Add filters to only export specific records. +
 *_Note:_* Filters are not available for all catalogues.
 
+*_Tip:_* The number of filters that are active for a catalogue is always shown:
+
+image:data:filters-number-of-filters.png[]
+
 | icon:order_return_create_edit[set=plenty] *Own data fields*
 | Own data fields are currently not available for most exports.
 |===
