--- a/docs/de-de/modules/daten/partials/catalogue-menu.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-menu.adoc
@@ -80,7 +80,7 @@ endif::file-export[]
 | Setze Filter, um nur bestimmte Datensätze zu exportieren. +
 *_Hinweis:_* Filter sind noch nicht für alle Kataloge verfügbar.
 
-*_Tipp:_* In der Navigation kannst du jederzeit sehen, wie viele Filter für den Katalog aktiv sind:
+*_Tipp:_* In der Navigation kannst du jederzeit sehen, wie viele Filter für den Katalog aktiv sind. Die Template-Filter werden mitgezählt.
 
 image:daten:filters-number-of-filters.png[]
 
