--- a/docs/en-gb/modules/data/partials/catalogue-menu.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-menu.adoc
@@ -79,7 +79,7 @@ endif::file-export[]
 | Add filters to only export specific records. +
 *_Note:_* Filters are not available for all catalogues.
 
-*_Tip:_* The number of filters that are active for a catalogue is always shown:
+*_Tip:_* The number of filters that are active for a catalogue is always shown. Template filters are included in the count.
 
 image:data:filters-number-of-filters.png[]
 
