--- a/docs/de-de/modules/business-entscheidungen/pages/marktplatz-bestandsinformationen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/marktplatz-bestandsinformationen.adoc
@@ -1,4 +1,4 @@
-= Marktplatz-Warenbestandsinformationen
+= Marktplatz-Bestandsinformationen
 :keywords: marketplaceStockInformation, Marktplatz-Warenbestandsinformationen, Bestandsinformationen Marktplätze
 :id: PN8W53U
 :author: team-plenty-channel
@@ -22,7 +22,7 @@ include::partial$kennzahlen-einleitung.adoc[]
 [#300]
 == Berechnung
 
-=== Warenbestandsinformationen
+=== Bestandsinformationen
 
 :das-bedeutet: Zur Berechnung werden also die an den Marktplatz übermittelten Warenbestandsinformationen herangezogen.
 
