--- a/docs/en-gb/modules/orders/pages/order-documents.adoc
+++ b/docs/en-gb/modules/orders/pages/order-documents.adoc
@@ -547,7 +547,7 @@ Defining a number range per country for invoices:
 . Go to *Setup » Client » Select client » Locations » Select location » Documents » Invoice*.
 . Select the required *Language* from the drop-down list.
 . Open the tab *Number range*.
-. Expand the menu *Numbering per country*.
+. Expand the menu *Number range per country*.
 . In the field *Number range* for the individual countries, enter a Prefix consisting of up to 5 numbers and/or letters for the number range, e.g. *16DE* for Germany.
 . In the field *Number (starting value)* for the individual countries, enter the number that should be assigned to the first invoice, e.g. *00001*. +
 → The invoice numbers are assigned for each country starting with this number.
