change wording add include

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -467,7 +467,7 @@
 **** xref:business-decisions:average-order-value.adoc[Average order value]
 **** xref:business-decisions:gross-revenue.adoc[Gross revenue]
 **** xref:business-decisions:marketplacestockmovement.adoc[Marketplace stock information]
-**** xref:business-decisions:marketplace-variation-validation.adoc[Marketplace Variation Validation]
+**** xref:business-decisions:marketplace-variation-validation.adoc[Marketplace variation validation]
 **** xref:business-decisions:messages.adoc[Messages]
 **** xref:business-decisions:orders.adoc[Orders]
 **** xref:business-decisions:orders-live.adoc[Orders (Live)]
