update nav.adoc EN

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -468,7 +468,7 @@
 **** xref:business-decisions:gross-revenue.adoc[Gross revenue]
 **** xref:business-decisions:marketplace-stock-information.adoc[Marketplace stock information]
 **** xref:business-decisions:marketplace-variation-validation.adoc[Marketplace variation validation]
-**** xref:business-decisions:messages.adoc[Messages]
+**** xref:business-decisions:messages-key-figure.adoc[Messages]
 **** xref:business-decisions:orders.adoc[Orders]
 **** xref:business-decisions:orders-live.adoc[Orders (Live)]
 **** xref:business-decisions:return-rate.adoc[Return rate]
@@ -488,7 +488,7 @@
 ***** xref:business-decisions:itemvariations.adoc[itemVariations]
 ***** xref:business-decisions:itemvariationsuppliers.adoc[itemVariationSuppliers]
 ***** xref:business-decisions:marketplacestockmovement.adoc[marketplaceStockMovement]
-***** xref:business-decisions:messages.adoc[messages]
+***** xref:business-decisions:messages-raw-data.adoc[messages]
 ***** xref:business-decisions:messageTagRelations.adoc[messageTagRelations]
 ***** xref:business-decisions:orderdocuments-en_gb.adoc[orderDocuments]
 ***** xref:business-decisions:orderitemamounts.adoc[orderItemAmounts]
