--- a/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
@@ -58,7 +58,7 @@ include::partial$lieferland-erstellungsdatum.adoc[]
 === Warenausgangsdatum
 
 :kennzahl: Der Versandumsatz
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem die Waren für Aufträge versandt wurden, einbezogen.
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem der Warenausgang für die Aufträge gebucht wurde, einbezogen.
 
 include::partial$warenausgangsdatum.adoc[]
 
@@ -139,24 +139,24 @@ include::partial$lager-zahlungsdatum.adoc[]
 
 include::partial$mandant-zahlungsdatum.adoc[]
 
-=== Auftragsherkunft, Warenausgangsdatum
+=== Auftragsherkunft, Fertigstellungsdatum
 
 :kennzahl: Der Versandumsatz
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Versandumsatz über welche Auftragsherkunft generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Versandumsatz über welche Auftragsherkunft generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$auftragsherkunft-warenausgangsdatum.adoc[]
 
-=== Lager, Warenausgangsdatum
+=== Lager, Fertigstellungsdatum
 
 :kennzahl: Der Versandumsatz
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Versandumsatz über welches Lager generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Versandumsatz über welches Lager generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$lager-warenausgangsdatum.adoc[]
 
-=== Mandant, Warenausgangsdatum
+=== Mandant, Fertigstellungsdatum
 
 :kennzahl: Der Versandumsatz
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Versandumsatz über welchen Mandanten generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem die Waren für die Aufträge versandt wurden.
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Versandumsatz über welchen Mandanten generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
 include::partial$mandant-warenausgangsdatum.adoc[]
 
