fix health check errors

--- a/docs/de-de/modules/payment/pages/sofort.adoc
+++ b/docs/de-de/modules/payment/pages/sofort.adoc
@@ -53,7 +53,7 @@ Beispiel für den Aufbau des Konfigurationsschlüssels: \{Kundennummer\}:\{Proje
 
 |*Auftragsstatus in Status 4/5 setzen*
 |Aktiviere diese Option, wenn Aufträge mit der Zahlungsart *Sofort* nach eingegangener Zahlung im System direkt Auftragsstatus 4 (In Versandvorbereitung) oder 5 (Freigabe Versand) erhalten sollen. Ansonsten werden die Aufträge mit Status 3 (Warten auf Zahlung) angelegt. +
-Beachte in diesem Zusammenhang, dass dieser Ablauf greift, sobald die Zahlungen in dein plentymarkets System importiert und den Aufträgen zugeordnet wurden. Die Zahlungen der Zahlungsart Sofort gehen auf deinem Konto ein. Danach importierst du sie in dein System. Du kannst dafür entweder xref:payment:EBICS.adoc#[EBICS] oder einen xref:daten:elasticSync-bankbuchungen.adoc#[Buchungsimport] nutzen. Das bedeutet, dass die Zahlung bereits bestätigt ist, wenn du sie importierst und der Auftrag einen Status zugewiesen bekommt. Mit dieser Einstellung entscheidest du also über den weiteren Ablauf der Auftragsbearbeitung. Ziehe auch in Betracht, dass z.B. Ereignisaktionen auf den ausgewählten Status reagieren.
+Beachte in diesem Zusammenhang, dass dieser Ablauf greift, sobald die Zahlungen in dein plentymarkets System importiert und den Aufträgen zugeordnet wurden. Die Zahlungen der Zahlungsart Sofort gehen auf deinem Konto ein. Danach importierst du sie in dein System. Du kannst dafür entweder xref:payment:ebics.adoc#[EBICS] oder einen xref:daten:elasticSync-bankbuchungen.adoc#[Buchungsimport] nutzen. Das bedeutet, dass die Zahlung bereits bestätigt ist, wenn du sie importierst und der Auftrag einen Status zugewiesen bekommt. Mit dieser Einstellung entscheidest du also über den weiteren Ablauf der Auftragsbearbeitung. Ziehe auch in Betracht, dass z.B. Ereignisaktionen auf den ausgewählten Status reagieren.
 
 2+^| *Erweiterte Einstellungen*
 
