--- a/docs/de-de/modules/payment/pages/zahlungsarten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/zahlungsarten-verwalten.adoc
@@ -108,8 +108,8 @@ Marktplatz-Zahlungsarten sind Zahlungsarten, die in Verbindung mit der Einrichtu
 * xref:maerkte:kaufland-de-einrichten.adoc#800[Kaufland.de]
 * xref:maerkte:neckermann-at-einrichten.adoc#1600[Neckermann.at]
 * xref:maerkte:plus-gartenxxl.adoc#400[Netto]
-* xref:maerkte:otto-market425.adoc[OTTO Payment]
-* xref:maerkte:pixmania.adoc#800[PIXmania]
+* xref:maerkte:otto-market.adoc#425[OTTO Payment]
+// * xref:maerkte:pixmania.adoc#800[PIXmania]
 * xref:maerkte:shopgate.adoc#600[Shopgate Payment]
 * xref:maerkte:yatego.adoc#900[Yatego Rechnung]
 * xref:maerkte:zalando.adoc#800[Zalando Payment]
