--- a/docs/en-gb/modules/payment/pages/managing-payment-methods.adoc
+++ b/docs/en-gb/modules/payment/pages/managing-payment-methods.adoc
@@ -109,7 +109,7 @@ Payment methods for markets are payment methods which are necessary to flag inco
 * xref:markets:neckermann-at-setup.adoc#1600[Neckermann.at]
 * xref:markets:plus-gartenxxl.adoc#400[Netto]
 * xref:markets:otto-market.adoc#425[OTTO Payment]
-* xref:markets:pixmania.adoc#800[PIXmania]
+// * xref:markets:pixmania.adoc#800[PIXmania]
 * xref:markets:shopgate.adoc#600[Shopgate Payment]
 * xref:markets:yatego.adoc#900[Yatego invoice]
 * xref:markets:zalando.adoc#800[Zalando payment]
