--- a/docs/en-gb/modules/payment/pages/online-bank-transfer.adoc
+++ b/docs/en-gb/modules/payment/pages/online-bank-transfer.adoc
@@ -54,7 +54,7 @@ Example for the structure of a configuration key: {Customer number}:{Project ID}
 
 |*Set order status directly to 4/5*
 |Activate this option if orders paid with the payment method *Online bank transfer* should automatically get the order status 4 or 5 after the payment is imported into the plentymarkets system. +
-Note in this context that this only applies when the payments are imported into your plentymarkets system and are then assigned to the orders. The payments with the payment method Sofort / online bank transfer are transferred into your bank account. After this, you import them into your system. For this, you can either use xref:payment:EBICS.adoc#[EBICS] or the xref:data:elasticSync-bank-postings.adoc#[postings import]. This means that the payment is already approved when you import them and the order gets an order status. Therefore, with this setting you decide the further workflow of order processing. Also take into account that e.g. event procedures will react to the selected status.
+Note in this context that this only applies when the payments are imported into your plentymarkets system and are then assigned to the orders. The payments with the payment method Sofort / online bank transfer are transferred into your bank account. After this, you import them into your system. For this, you can either use xref:payment:ebics.adoc#[EBICS] or the xref:data:elasticSync-bank-postings.adoc#[postings import]. This means that the payment is already approved when you import them and the order gets an order status. Therefore, with this setting you decide the further workflow of order processing. Also take into account that e.g. event procedures will react to the selected status.
 
 2+^| *Advanced settings*
 
